workshop04/myapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: stackupiss/weather:v1
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
        ports:
        - name: weather-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /ready
            port: weather-port
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /health
            port: weather-port
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: weather
  labels:
    app: myapp-svc
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 3000
---
