workshop04/weather-istio.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: weather-gw
  namespace: weather
  labels:
    app: weather-app

spec:
  selector:
    istio: ingressgateway

  servers:
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3

metadata:
  name: weather-vs
  namespace: weather
  labels:
    app: myapp-vs

spec:
  gateways:
  - weather-gw
  hosts:
  - "*"
  http:
  - match:
    - uri:
      prefix: /
    route:
    - destination:
        host: myapp-svc.weather.svc.cluster.local
